--- a/Within_Species/Species_Specific_Models.Rmd
+++ b/Within_Species/Species_Specific_Models.Rmd
@@ -261,8 +261,8 @@ traits_2019 <- full_join_2019 %>%
 
 ```{r}
 traits <- traits_2019 %>% 
-  # filter(sla < 60) %>% # there are a few crazy outliers that I need to go double-check
-  filter(ldmc < 1000) %>%  # there are a few crazy outliers that I need to go double-check %>% 
+  filter(dry_weight_g < wet_weight_g) %>%  # removing incorrect weights
+  filter(sla < 65) %>% # there is one big outlier, and I don't think the dry weight is correct
   mutate(log_ldmc = log(ldmc)) %>% 
   unite(c("climate", "new_block", "treatment"), col = "plot", sep = "-", remove = FALSE) %>% 
   drop_na()
@@ -275,13 +275,13 @@ ggplot(data = traits, aes(x = sla, color = treatment)) +
 model_1 <-  glmmTMB(data = traits, sla ~ treatment * species + climate * species, family = gaussian, na.action = na.fail)
 dredge(model_1) # best fit model is climate and species; AIC = 1198.3
 model_1 <- model_1 <- glmmTMB(data = traits, sla ~ climate + species, family = gaussian, na.action = na.fail)
-simulateResiduals(model_1, plot= T) # doesn't pass KS test
+simulateResiduals(model_1, plot= T) # doesn't pass outlier test
 
 # with block (old)
 model_2 <-  glmmTMB(data = traits, sla ~ treatment * species + climate * species + (1|new_block), family = gaussian, na.action = na.fail)
 dredge(model_2) # best fit model is climate and species; AIC = 1190.2
 model_2 <-  glmmTMB(data = traits, sla ~ climate + species + (1|new_block), family = gaussian, na.action = na.fail)
-simulateResiduals(model_2, plot= T)
+simulateResiduals(model_2, plot= T) # doesn't pass outlier test
 
 # with block (new)
 # model_3 <- glmmTMB(data = traits, sla ~ treatment * species + climate * species + (1|new_block/plot), family = gaussian, na.action = na.fail)
@@ -417,41 +417,44 @@ ggplot(data = bro_dia, aes(x = ldmc, color = treatment)) +
 ggplot(data = bro_dia, aes(x = indiv_area, color = treatment)) +
   geom_histogram()
 
+bro_dia %>% 
+  group_by(new_block) %>% 
+  count()
+
+lapply(bro_dia["new_block"], unique)
+
 ```
 #### LA
-Best fit: LA ~ 1
+Best fit: LA ~ + (1|block)
 ```{r}
 # model
-bro_dia_la <- glmmTMB(data = bro_dia, indiv_area ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(bro_dia_la) # get convergence error; best fit model is intercept only
-
-bro_dia_la <- glm(data = bro_dia, indiv_area ~ 1 + (1|new_block), family = "gaussian", na.action = na.fail)
+bro_dia_la <- glmmTMB(data = bro_dia, indiv_area ~ treatment * climate + (1|new_block) , family = gaussian, na.action = na.fail)
+dredge(bro_dia_la) # best-fit intercept only
+bro_dia_la <- glmmTMB(data = bro_dia, indiv_area ~ 1 + (1|new_block), family = "gaussian", na.action = na.fail)
 
 simulateResiduals(bro_dia_la, plot= T) # looks good
-shapiro.test(residuals(bro_dia_la)) # normal
 
 ```
 #### SLA
-SLA ~ 1 + block
-* need to do avereging
+SLA ~ 1 + (1|block)
+* need to do averaging
 ```{r}
 # model
 bro_dia_sla <- glmmTMB(data = bro_dia, sla ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
 dredge(bro_dia_sla) # best fit model is just intercept, but would need to do averaging
 bro_dia_sla <- glmmTMB(data = bro_dia, sla ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
-simulateResiduals(bro_dia_sla, plot= T) # ok
+simulateResiduals(bro_dia_sla, plot= T) # ok?
 shapiro.test(residuals(bro_dia_sla)) # normal
 ```
 #### LDMC
-LDMC ~ climate
+LDMC ~ 1 + (1|block)
 * need to do averaging
 ```{r}
 # model
-bro_dia_ldmc <- glmmTMB(data = bro_dia, ldmc ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail) # convergence
-bro_dia_ldmc <- glmmTMB(data = bro_dia, ldmc ~ treatment * climate, family = gaussian, na.action = na.fail)
-dredge(bro_dia_ldmc) # best fit model is climate
-bro_dia_ldmc <- glmmTMB(data = bro_dia, ldmc ~ climate, family = gaussian, na.action = na.fail)
+bro_dia_ldmc <- glmmTMB(data = bro_dia, ldmc ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(bro_dia_ldmc) # best fit model is intercept
+bro_dia_ldmc <- glmmTMB(data = bro_dia, ldmc ~ 1 + (1|new_block), family = gaussian, na.action = na.fail) # get model convergence
 
 simulateResiduals(bro_dia_ldmc, plot= T) # ok
 shapiro.test(residuals(bro_dia_ldmc)) # normal
@@ -475,68 +478,51 @@ fes_myu %>%
   facet_grid(~ traits, scales = "free")
 ```
 #### LA
-best fit: log(LA) ~ climate
+best fit: log(LA) ~ climate + (1|block)
 ```{r}
 fes_myu_la <- glmmTMB(data = fes_myu, indiv_area ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(fes_myu_la) # get convergence error
+dredge(fes_myu_la) # get convergence error; best fit is climate only
+fes_myu_la <- glmmTMB(data = fes_myu, indiv_area ~ climate + (1|new_block), family = gaussian, na.action = na.fail)
 
-fes_myu_la <- glm(data = fes_myu, indiv_area ~ treatment * climate, family = gaussian, na.action = na.fail)
-dredge(fes_myu_la) # best fit model is climate only
-fes_myu_la <- glm(data = fes_myu, indiv_area ~ climate, family = gaussian, na.action = na.fail)
-
-simulateResiduals(fes_myu_la, plot= T) # ok
-shapiro.test(residuals(fes_myu_la)) # not quite normal
+simulateResiduals(fes_myu_la, plot= T) # not ok
+shapiro.test(residuals(fes_myu_la)) # not normal
 
 # log transformation
-fes_myu_la <- glm(data = fes_myu, log_area ~ treatment * climate, family = gaussian, na.action = na.fail)
+fes_myu_la <- glmmTMB(data = fes_myu, log_area ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
 dredge(fes_myu_la) # best fit model is climate only
-fes_myu_la <- glm(data = fes_myu, log_area ~ climate, family = gaussian, na.action = na.fail)
+fes_myu_la <- glmmTMB(data = fes_myu, log_area ~ climate + (1|new_block), family = gaussian, na.action = na.fail)
 
-simulateResiduals(fes_myu_la, plot= T) # good
+simulateResiduals(fes_myu_la, plot= T) #ok?
 shapiro.test(residuals(fes_myu_la)) # normal
 ```
 #### SLA
-best fit: log(SLA) ~ 1
-* need to do model averaging
+best fit: SLA ~ 1 + (1|block)
+*need to average
 ```{r}
 fes_myu_sla <- glmmTMB(data = fes_myu, sla ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(fes_myu_sla) # get convergence error
+dredge(fes_myu_sla) # get convergence error; best fit is intercept only; need to average
+fes_myu_sla <- glmmTMB(data = fes_myu, sla ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
-fes_myu_sla <- glm(data = fes_myu, sla ~ treatment * climate, family = gaussian, na.action = na.fail)
-dredge(fes_myu_sla) # best fit model is intercept only, but would need to average
-fes_myu_sla <- glm(data = fes_myu, sla ~ 1, family = gaussian, na.action = na.fail)
-
-simulateResiduals(fes_myu_sla, plot= T) # ok
+simulateResiduals(fes_myu_sla, plot= T) # ok?
 shapiro.test(residuals(fes_myu_sla)) # not normal
 
-# log transformation
-fes_myu_sla <- glm(data = fes_myu, log_sla ~ treatment * climate, family = gaussian, na.action = na.fail)
-dredge(fes_myu_sla) # best fit model is intercept only, but would need to average
-fes_myu_sla <- glm(data = fes_myu, log_sla ~ 1, family = gaussian, na.action = na.fail)
-
-simulateResiduals(fes_myu_sla, plot= T) # ok
-shapiro.test(residuals(fes_myu_sla)) # normal
+# # log transformation
+# fes_myu_sla <- glmmTMB(data = fes_myu, log_sla ~ treatment * climate + (1|new_block) + (1|plot), family = gaussian, na.action = na.fail)
+# dredge(fes_myu_sla) # get convergence error; best fit is intercept only
+# fes_myu_sla <- glmmTMB(data = fes_myu, log_sla ~ 1 + (1|new_block) + (1|plot), family = gaussian, na.action = na.fail)
+# 
+# simulateResiduals(fes_myu_sla, plot= T) # ok
+# shapiro.test(residuals(fes_myu_sla)) # normal
 ```
 #### LDMC
+LDMC ~ 1 + (1|block)
 ```{r}
-fes_myu_ldmc <- glmmTMB(data = fes_myu, ldmc ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail) # get convergence error
-
-fes_myu_ldmc <- glm(data = fes_myu, ldmc ~ treatment * climate, family = gaussian, na.action = na.fail)
-dredge(fes_myu_ldmc) # best fit model is intercept only, but would need to average
-fes_myu_ldmc <- glm(data = fes_myu, ldmc ~ 1, family = gaussian, na.action = na.fail)
+fes_myu_ldmc <- glmmTMB(data = fes_myu, ldmc ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(fes_myu_ldmc) # convergence error, best fit is intercept
+fes_myu_ldmc <- glmmTMB(data = fes_myu, ldmc ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
 simulateResiduals(fes_myu_ldmc, plot= T) # ok?
-shapiro.test(residuals(fes_myu_ldmc)) # not normal
-
-# log transformation
-fes_myu_ldmc <- glmmTMB(data = fes_myu, log_ldmc ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail) # get convergence error
-
-fes_myu_ldmc <- glm(data = fes_myu, log_ldmc ~ treatment * climate, family = gaussian, na.action = na.fail)
-dredge(fes_myu_ldmc) # best fit model is intercept only
-fes_myu_ldmc <- glm(data = fes_myu, log_ldmc ~ 1, family = gaussian, na.action = na.fail)
-
-simulateResiduals(fes_myu_ldmc, plot= T) # does not pass KS test
-shapiro.test(residuals(fes_myu_ldmc)) # not normal
+shapiro.test(residuals(fes_myu_ldmc)) # normal
 ```
 ### Bromus hordeaceus
 ```{r}
@@ -557,36 +543,32 @@ bro_hor %>%
 
 ```
 #### LA
-LA ~ climate
-* need to do model averaging
+LA ~ 1 + (1|block)
+* need to do averaging
 ```{r}
-bro_hor_la <- glmmTMB(data = bro_hor, indiv_area ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail) # get convergence error
-dredge(bro_hor_la)
-
-bro_hor_la <- glm(data = bro_hor, indiv_area ~ treatment * climate, family = gaussian, na.action = na.fail)
-dredge(bro_hor_la) # best fit model is climate, but would need to average
-bro_hor_la <- glm(data = bro_hor, indiv_area ~ climate, family = gaussian, na.action = na.fail)
+bro_hor_la <- glmmTMB(data = bro_hor, indiv_area ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(bro_hor_la) # get convergence error, best fit is intercept
+bro_hor_la <- glmmTMB(data = bro_hor, indiv_area ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
 simulateResiduals(bro_hor_la, plot= T) # good
-shapiro.test(residuals(bro_hor_la)) # normal
+shapiro.test(residuals(bro_hor_la)) # not normal
 ```
 #### SLA
-SLA ~ climate
-* need to do model averaging
+SLA ~ 1 + (1|block)
+* need to do averaging
 ```{r}
 bro_hor_sla <- glmmTMB(data = bro_hor, sla ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(bro_hor_sla) # best fit model is intercept, but would need to do averaging
+dredge(bro_hor_sla) # get convergence error, best fit is climate
 bro_hor_sla <- glmmTMB(data = bro_hor, sla ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
-simulateResiduals(bro_hor_sla, plot= T) # ok
+simulateResiduals(bro_hor_sla, plot= T) # fine
 shapiro.test(residuals(bro_hor_sla)) # normal
 ```
 #### LDMC
-LDMC ~ treatment
-* need to do averaging
+LDMC ~ treatment + (1|block)
 ```{r}
 bro_hor_ldmc <- glmmTMB(data = bro_hor, ldmc ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(bro_hor_ldmc) # best fit model is treatment
+dredge(bro_hor_ldmc) # convergence error; best fit model is treatment
 bro_hor_ldmc <- glmmTMB(data = bro_hor, ldmc ~ treatment + (1|new_block), family = gaussian, na.action = na.fail)
 
 simulateResiduals(bro_hor_ldmc, plot= T) # good
@@ -611,46 +593,44 @@ bro_tec %>%
 #### LA
 * has huge outlier
 ```{r}
-bro_tec_la <- glmmTMB(data = bro_tec, indiv_area ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail) # convergence
-bro_tec_la <- glmmTMB(data = bro_tec, indiv_area ~ treatment * climate, family = gaussian, na.action = na.fail)
-dredge(bro_tec_la) # best fit is intercept
-bro_tec_la <- glmmTMB(data = bro_tec, indiv_area ~ 1, family = gaussian, na.action = na.fail)
+bro_tec_la <- glmmTMB(data = bro_tec, indiv_area ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(bro_tec_la) # convergence proglem; best fit is intercept
+bro_tec_la <- glmmTMB(data = bro_tec, indiv_area ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
-simulateResiduals(bro_tec_la, plot= T) # not good
-shapiro.test(residuals(bro_tec_la)) # not normal
+simulateResiduals(bro_tec_la, plot= T) # so bad
+shapiro.test(residuals(bro_tec_la)) # 
 ```
 #### SLA
-SLA ~ intercept + block
+SLA ~ 1 ~ (1|block)
 *need to do averaging
 ```{r}
 bro_tec_sla <- glmmTMB(data = bro_tec, sla ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(bro_tec_sla) # best fit model is intercept, but would need to do averaging
+dredge(bro_tec_sla) # best fit model is intercept, best fit is intercept
 bro_tec_sla <- glmmTMB(data = bro_tec, sla ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
 simulateResiduals(bro_tec_sla, plot= T) # good
 shapiro.test(residuals(bro_tec_sla)) # normal
 ```
 #### LDMC
+
 ```{r}
 bro_tec_ldmc <- glmmTMB(data = bro_tec, ldmc ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(bro_tec_ldmc) # best fit model is intercept
+dredge(bro_tec_ldmc) # convergence warning; best fit is intercept only
 bro_tec_ldmc <- glmmTMB(data = bro_tec, ldmc ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
 simulateResiduals(bro_tec_ldmc, plot= T) # does not pass KS test
-shapiro.test(residuals(bro_tec_ldmc)) # normal
 
 # log transformation
 bro_tec_ldmc <- glmmTMB(data = bro_tec, log_ldmc ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(bro_tec_ldmc) # best fit model is intercept
+dredge(bro_tec_ldmc) # best fit is intercept only
 bro_tec_ldmc <- glmmTMB(data = bro_tec, log_ldmc ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
 simulateResiduals(bro_tec_ldmc, plot= T) # does not pass KS test
-shapiro.test(residuals(bro_tec_ldmc)) # normal
 ```
 ### Hordeum murium
 ```{r}
 hor_mur <- traits %>% 
-  filter(species == "Bromus tectorum") %>%
+  filter(species == "Hordeum murinum") %>%
   mutate(log_ldmc = log(ldmc)) %>% 
   mutate(log_la = log(indiv_area)) %>% 
   drop_na()
@@ -665,52 +645,35 @@ hor_mur %>%
   facet_grid(~ traits, scales = "free")
 ```
 #### LA
+la ~ 1 + (1|block)
 ```{r}
-hor_mur_la <- glmmTMB(data = hor_mur, indiv_area ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail) # convergence issue
-hor_mur_la <- glm(data = hor_mur, indiv_area ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(hor_mur_la) # best fit intercept only
-hor_mur_la <- glm(data = hor_mur, indiv_area ~ 1, family = gaussian, na.action = na.fail)
+hor_mur_la <- glmmTMB(data = hor_mur, indiv_area ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(hor_mur_la) # get convergece warning; best fit intercept only
+hor_mur_la <- glmmTMB(data = hor_mur, indiv_area ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
-simulateResiduals(hor_mur_la, plot=T) # does not pass KS test
-shapiro.test(residuals(hor_mur_la)) # not normal
-
-# log transformation
-hor_mur_la <- glmmTMB(data = hor_mur, log_la ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(hor_mur_la) # best fit model is intercept
-hor_mur_la <- glmmTMB(data = hor_mur, log_la ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
-
-simulateResiduals(hor_mur_la, plot=T) # ok
-shapiro.test(residuals(hor_mur_la)) # not normal
+simulateResiduals(hor_mur_la, plot=T) # good
+shapiro.test(residuals(hor_mur_la)) # normal
 
 ```
 #### SLA
-SLA ~ 1 + block
-*need to do averaging
+SLA ~ 1 + (1|block)
 ```{r}
 hor_mur_sla <- glmmTMB(data = hor_mur, sla ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(hor_mur_sla) # best fit model is intercept, but would need to do averaging
+dredge(hor_mur_sla) # convergence warning; best fit model is intercept
 hor_mur_sla <- glmmTMB(data = hor_mur, sla ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
 simulateResiduals(hor_mur_sla, plot= T) # good
 shapiro.test(residuals(hor_mur_sla)) # normal
 ```
 #### LDMC
+LDMC ~ 1 + (1|block)
 ```{r}
 hor_mur_ldmc <- glmmTMB(data = hor_mur, ldmc ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(hor_mur_ldmc) # best fit model is intercept
+dredge(hor_mur_ldmc) # convergence warning; best fit model is intercept
 hor_mur_ldmc <- glmmTMB(data = hor_mur, ldmc ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
-simulateResiduals(hor_mur_ldmc, plot= T) # does not pass KS test
-shapiro.test(residuals(hor_mur_ldmc)) # normal
-
-# log transformation
-hor_mur_ldmc <- glmmTMB(data = hor_mur, log_ldmc ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(hor_mur_ldmc) # best fit model is intercept
-hor_mur_ldmc <- glmmTMB(data = hor_mur, log_ldmc ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
-
-simulateResiduals(hor_mur_ldmc, plot= T) # does not pass KS test
-shapiro.test(residuals(hor_mur_ldmc)) # normal
-
+simulateResiduals(hor_mur_ldmc, plot= T) # 
+shapiro.test(residuals(hor_mur_ldmc)) # 
 ```
 ### Erodium cicutarium
 ```{r}
@@ -729,37 +692,37 @@ ero_cic %>%
   facet_grid(~ traits, scales = "free")
 ```
 #### LA
-LA ~ climate
+LA ~ climate + (1|block)
+* need to do averaging
 ```{r}
-ero_cic_la <- glmmTMB(data = ero_cic, indiv_area ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(ero_cic_la) # convergence problem
-ero_cic_la <- glmmTMB(data = ero_cic, indiv_area ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(ero_cic_la)  # best fit climate only
-ero_cic_la <- glmmTMB(data = ero_cic, indiv_area ~ climate, family = gaussian, na.action = na.fail)
+
+ero_cic_la <- glmmTMB(data = ero_cic, indiv_area ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(ero_cic_la) # convergence problem; best fit is climate
+ero_cic_la <- glmmTMB(data = ero_cic, indiv_area ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
 # does data fit model?
-simulateResiduals(ero_cic_la, plot=T) # ok?
+simulateResiduals(ero_cic_la, plot=T) # ok
 shapiro.test(residuals(ero_cic_la)) # normal
 ```
 #### SLA
-SLA ~ 1
+SLA ~ 1 + (1|block)
 ```{r}
 ero_cic_sla <- glmmTMB(data = ero_cic, sla ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(ero_cic_sla) # best fit model is intercept only
-hor_mur_sla <- glmmTMB(data = ero_cic, sla ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(ero_cic_sla) # convergence; best fit model is intercept only
+ero_cic_sla <- glmmTMB(data = ero_cic, sla ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
 simulateResiduals(ero_cic_sla, plot= T) # good
 shapiro.test(residuals(ero_cic_sla)) # normal
 ```
 #### LDMC
-LDMC ~ 1 + Block
+LDMC ~ 1 + (1|block)
 * need to do averaging
 ```{r}
 ero_cic_ldmc <- glmmTMB(data = ero_cic, ldmc ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(ero_cic_ldmc) # best fit model is climate, but need to do averaging
-hor_mur_ldmc <- glmmTMB(data = ero_cic, ldmc ~ climate + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(ero_cic_ldmc) # convergence; best-fit model climate
+ero_cic_ldmc <- glmmTMB(data = ero_cic, ldmc ~ climate + (1|new_block), family = gaussian, na.action = na.fail)
 
-simulateResiduals(ero_cic_ldmc, plot= T) # good
+simulateResiduals(ero_cic_ldmc, plot= T) # gets a warming for too few data points
 shapiro.test(residuals(ero_cic_ldmc)) # normal
 ```
 ### Galium aparine
@@ -779,18 +742,18 @@ gal_apa %>%
   facet_grid(~ traits, scales = "free")
 ```
 #### LA
-LA ~ Climate
+LA ~ Climate + (1|Block)
 ```{r}
 gal_apa_la <- glmmTMB(data = gal_apa, indiv_area ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(gal_apa_la) # best fit climate only
+dredge(gal_apa_la) # convergence; best fit is intercept only
 gal_apa_la <- glmmTMB(data = gal_apa, indiv_area ~ climate + (1|new_block), family = gaussian, na.action = na.fail)
 
 # does data fit model?
-simulateResiduals(gal_apa_la, plot=T) # ok?
+simulateResiduals(gal_apa_la, plot=T) # good
 shapiro.test(residuals(gal_apa_la)) # normal
 ```
 #### SLA
-SLA ~ Climate + block
+SLA ~ Climate + (1|Block)
 *need to do model averaging
 ```{r}
 gal_apa_sla <- glmmTMB(data = gal_apa, sla ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail)
@@ -798,27 +761,26 @@ dredge(gal_apa_sla) # best fit climate only, need to do model averaging
 gal_apa_sla <- glmmTMB(data = gal_apa, sla ~ climate + (1|new_block), family = gaussian, na.action = na.fail)
 
 # does data fit model?
-simulateResiduals(gal_apa_sla, plot=T) # ok?
+simulateResiduals(gal_apa_sla, plot=T) # good
 shapiro.test(residuals(gal_apa_sla)) # normal
 ```
 #### LDMC
-log(LDMC) ~ climate + block
+LDMC ~ Climate + (1|Block)
 ```{r}
 gal_apa_ldmc <- glmmTMB(data = gal_apa, ldmc ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail) # model convergence
-gal_apa_ldmc <- glmmTMB(data = gal_apa, ldmc ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(gal_apa_ldmc ) # best fit climate only
-gal_apa_ldmc <- glmmTMB(data = gal_apa, ldmc ~ climate, family = gaussian, na.action = na.fail)
+dredge(gal_apa_ldmc ) # convergence; best fit climate only
+gal_apa_ldmc <- glmmTMB(data = gal_apa, ldmc ~ climate + (1|new_block), family = gaussian, na.action = na.fail) # model convergence
 
 simulateResiduals(gal_apa_ldmc, plot=T) # ok?
 shapiro.test(residuals(gal_apa_ldmc )) # not normal
 
-# log transformation
-gal_apa_ldmc <- glmmTMB(data = gal_apa, log_ldmc ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(gal_apa_ldmc) # bets fit is climate only
-gal_apa_ldmc <- glmmTMB(data = gal_apa, log_ldmc ~ climate + (1|new_block), family = gaussian, na.action = na.fail)
-
-simulateResiduals(gal_apa_ldmc, plot=T) # ok
-shapiro.test(residuals(gal_apa_ldmc )) # normal
+# # log transformation
+# gal_apa_ldmc <- glmmTMB(data = gal_apa, log_ldmc ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail)
+# dredge(gal_apa_ldmc) # bets fit is climate only
+# gal_apa_ldmc <- glmmTMB(data = gal_apa, log_ldmc ~ climate + (1|new_block), family = gaussian, na.action = na.fail)
+# 
+# simulateResiduals(gal_apa_ldmc, plot=T) # ok
+# shapiro.test(residuals(gal_apa_ldmc )) # normal
 
 ```
 ### Plagiobothrys nothofulvus
@@ -840,41 +802,43 @@ pla_not %>%
   facet_grid(~ traits, scales = "free")
 ```
 #### LA
-log(LA) ~ intercept + block
+LA ~ 1 + (1|block)
 *need to do averaging
 ```{r}
 pla_not_la <- glmmTMB(data = pla_not, indiv_area ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(pla_not_la) # best fit intercept only
+dredge(pla_not_la) #convergenct; best fit intercept only
 pla_not_la <- glmmTMB(data = pla_not, indiv_area ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
-simulateResiduals(pla_not_la, plot=T) # doesn't look ok
+simulateResiduals(pla_not_la, plot=T) # ok?
 shapiro.test(residuals(pla_not_la)) # not normal
 
-# log transformation
-pla_not_la <- glmmTMB(data = pla_not, log_la ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(pla_not_la) # best fit intercept only, but need to do averaging
-pla_not_la <- glmmTMB(data = pla_not, log_la ~ climate + (1|new_block), family = gaussian, na.action = na.fail)
-
-simulateResiduals(pla_not_la, plot=T) # ok?
-shapiro.test(residuals(pla_not_la)) # normal
+# # log transformation
+# pla_not_la <- glmmTMB(data = pla_not, log_la ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail)
+# dredge(pla_not_la) # best fit intercept only, but need to do averaging
+# pla_not_la <- glmmTMB(data = pla_not, log_la ~ climate + (1|new_block), family = gaussian, na.action = na.fail)
+# 
+# simulateResiduals(pla_not_la, plot=T) # ok?
+# shapiro.test(residuals(pla_not_la)) # normal
 
 ```
 #### SLA
+SLA ~ Climate + (1|Block)
+*need to do averaging
 ```{r}
 pla_not_sla <- glmmTMB(data = pla_not, sla ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(pla_not_sla) # best fit climate only
+dredge(pla_not_sla) # best fit climate only; averaging
 pla_not_sla <- glmmTMB(data = pla_not, sla ~ climate + (1|new_block), family = gaussian, na.action = na.fail)
 
-simulateResiduals(pla_not_sla, plot=T) # ok?
-shapiro.test(residuals(pla_not_sla)) # not normal
+simulateResiduals(pla_not_sla, plot=T) # good
+shapiro.test(residuals(pla_not_sla)) # normal
 
-# log transformation
-pla_not_sla <- glmmTMB(data = pla_not, log_sla ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(pla_not_sla) # best fit intercept only
-pla_not_sla <- glmmTMB(data = pla_not, log_sla ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
-
-simulateResiduals(pla_not_sla, plot=T) # ok?
-shapiro.test(residuals(pla_not_sla)) # not normal
+# # log transformation
+# pla_not_sla <- glmmTMB(data = pla_not, log_sla ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail)
+# dredge(pla_not_sla) # best fit intercept only
+# pla_not_sla <- glmmTMB(data = pla_not, log_sla ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
+# 
+# simulateResiduals(pla_not_sla, plot=T) # ok?
+# shapiro.test(residuals(pla_not_sla)) # not normal
 
 ```
 #### LDMC 
